--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,11 @@ nav img {
     width: 5rem;
     height: 5rem;
 }
+.icon-img{
+    width: 4rem;
+    height: 4rem;
 
+}
 .pay-img {
     width: 3rem;
     height: 3rem;
@@ -46,15 +50,23 @@ nav {
 }
 
 header {
+    background-image: url(../images/slider\ 1.jpg);
     background-position: center center;
     background-size: cover;
     height: 100vh;
     /* background-attachment: fixed; */
-    animation: bgChange 50s ease-in-out infinite;
+    animation: 50s ease-in-out infinite;
 }
 
-header button {
-    transform: translate(-5rem, 25rem);
+header .btn-success {
+    transform: translate(-5rem, 15rem);
+    z-index: 999999;
+    width: 16rem;
+    font-size: 2rem !important;
+}
+
+header .btn-danger {
+    transform: translate(-5rem, 21rem);
     z-index: 999999;
     width: 16rem;
     font-size: 2rem !important;
@@ -121,12 +133,12 @@ header h1 {
 }
 
 /* ................... تبرع ..................... */
-.card {
+/* .card {
     height: 500px;
-}
+} */
 
 .card img {
-    height: 250px;
+    height: 300px;
 }
 
 
@@ -165,4 +177,7 @@ footer {
     background-position: center center;
     background-size: contain;
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)), url(../images/footer.jpg);
+}
+.my-text-location{
+    font-size: 0.85rem;
 }
