--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,7 +19,7 @@
 
 /* ................... 1 header..................... */
 .navbar{
-    background-color: #e2f8ff !important;
+    /* background-color: #e2f8ff !important; */
 }
 .nav-link:hover,
 .active {
@@ -39,8 +39,8 @@
 }
 
 nav img {
-    width: 5rem;
-    height: 5rem;
+    width: 8rem;
+    height: 7rem;
 }
 
 .icon-img {
@@ -50,8 +50,8 @@ nav img {
 }
 
 .pay-img {
-    width: 3rem;
-    height: 3rem;
+    width: 2rem;
+    height: 2rem;
 }
 
 nav {
