--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,15 +4,18 @@
     scroll-behavior: smooth;
     --main-color: rgb(0, 0, 135)
 }
-
+.bg-success-light{
+    background-color: #62ab8a;
+}
 h1,
 h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+th {
 
-    font-family: "Marhey", sans-serif ;
+    font-family: "Marhey", sans-serif;
     font-optical-sizing: auto;
     font-weight: normal;
     color: #198754 !important;
@@ -23,10 +26,19 @@ li,
 a,
 button,
 span {
-    font-family: "Alexandria", sans-serif !important;
-    font-optical-sizing: auto;
     font-weight: bold;
     font-size: 0.9rem !important;
+}
+
+p,
+li,
+a,
+button,
+span,
+tbody {
+    font-family: "Alexandria", sans-serif !important;
+    font-optical-sizing: auto;
+
 }
 
 .pointer {
@@ -42,9 +54,6 @@ span {
 }
 
 /* ................... 1 header..................... */
-.navbar {
-    /* background-color: #e2f8ff !important; */
-}
 
 .nav-link:hover,
 .active {
@@ -123,7 +132,7 @@ header {
     /* background-size: contain; */
     /* height: 100vh; */
     /* background-repeat: no-repeat; */
-    animation:  10s ease-in-out infinite;
+    animation: 10s ease-in-out infinite;
 }
 
 
@@ -199,6 +208,12 @@ form button {
 
 .validation {
     font-size: 1rem;
+}
+
+.form-container {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)), url(../images/footer.jpg);
+    background-position: center center;
+    background-size: cover;
 }
 
 /* ................... 1 header..................... */
