--- a/src/css/rwd.css
+++ b/src/css/rwd.css
@@ -2,6 +2,9 @@
     .form-container {
         width: 90%;
     }
+    #formFristRegister {
+        width: 100% !important;
+    }
 
     .carousel img {
         height: 400px;
