--- a/src/css/style.css
+++ b/src/css/style.css
@@ -218,7 +218,9 @@ form button {
 
 .form-container {
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)), url(../images/footer.jpg);
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)), url(../images/final\ img/register=logo.png); */
     background-position: center center;
+    /* background-repeat: no-repeat; */
     background-size: cover;
 }
 
